--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -34,7 +34,7 @@ header h1 {
 
 nav a {
     color: var(--dark);
-    padding: 14px 20px;
+    padding: 20px;
     text-decoration: none;
     text-align: center;
     margin-left: 20px;
@@ -45,41 +45,48 @@ nav a {
 main {
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
     flex-direction: column;
     background-color: #bfd3d6;
     color: var(--light);
 }
 
- .hero{
-    height: 600px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(".assets/images/hero-image.jpeg");
-    background-size: cover;
-    background-position: center;
-}
-
 .nav-anchor {
     height: 120px;
-
 }
 
 .main-section {
     display: flex;
-    position: relative;
-    top: 0;
     flex-direction: column;
     margin: 1em;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: var(--light);
-    border: solid 1px black;
-    height: 50px;
-    
+    border: solid 1px black;   
 }
 
-.main-section h2 p {
-    line-height: 1.5;
+#About-Me {
+    width: 66%;
+    align-items: center;
     position: relative;
-    left: 10px;
+    left: 16.5%;
+    height: 150px;
 }
 
+#Projects{
+    height: 600px;
+    margin: 1em;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    background-size: cover;
+    background-position: center;
+}
+
+#Contact{
+    align-items: center;
+    list-style-type: none;
+    justify-content: space-between;
+}
+
+.contact-info {
+    list-style-type: none;
+    display: inline;
+}
