--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -7,10 +7,12 @@
 :root {
     --lighttext: rgb(228, 255, 248);
     --dark: #3b3b4f;
+    --lightbackground: #bfd3d6;
 }
 
 body {
     height: 100%;
+    background-color: var(--lightbackground);
 }
 
 header {
@@ -23,8 +25,7 @@ header {
     padding: 60px;
     background-color: var(--dark);
     height: 75px;
-    
-    
+    z-index: 2;  
 }
 
 header h1 {
@@ -47,21 +48,36 @@ main {
     flex-wrap: wrap;
     width: 100%;
     flex-direction: column;
-    background-color: #bfd3d6;
-    color: var(--light);
 }
 
 .nav-anchor {
     height: 120px;
 }
 
-.main-section {
+.about-container {
     display: flex;
     flex-direction: column;
     margin: 1em;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: var(--light);
     border: solid 1px black;   
+}
+
+.project-container {
+    display: flex;
+    flex-direction: column;
+    margin: 1em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: var(--light);
+    border: solid 1px black;
+    gap: 5%;   
+}
+
+.horiseon {
+    height: 300px;
+    width: 200px;
+    display: block;
+    text-align: center;
 }
 
 #About-Me {
@@ -82,11 +98,26 @@ main {
 
 #Contact{
     align-items: center;
-    list-style-type: none;
     justify-content: space-between;
+    background-color: var(--dark);
+    color: var(--lighttext);
+    display: flex;
+    margin: 1em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border: solid 1px black;  
+    padding: 10px;
+    margin-bottom: 15px;
 }
 
-.contact-info {
-    list-style-type: none;
-    display: inline;
+contact h3 {
+    padding-left: 15px;
+}
+
+#contact-info {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+#contact-info:hover {
+    font-style: bolder;
 }
