--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -54,23 +54,24 @@ main {
     height: 120px;
 }
 
-.about-container {
-    display: flex;
-    flex-direction: column;
-    margin: 1em;
+.main-section {
+    display: grid;
+    grid-template-columns: 225px 1fr;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: var(--light);
-    border: solid 1px black;   
+    border: solid 1px black;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); 
 }
 
 .project-container {
-    display: flex;
+    display: grid;
     flex-direction: column;
     margin: 1em;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: var(--light);
     border: solid 1px black;
-    gap: 5%;   
+    gap: 5%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));    
 }
 
 .horiseon {
@@ -80,16 +81,16 @@ main {
     text-align: center;
 }
 
-#About-Me {
+/* #About-Me {
     width: 66%;
     align-items: center;
     position: relative;
     left: 16.5%;
     height: 150px;
-}
+} */
 
 #Projects{
-    height: 600px;
+    displ
     margin: 1em;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
     background-size: cover;
