--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -54,8 +54,10 @@ main {
     height: 120px;
 }
 
+/*borrowed the grid-template-column idea from Scott Casey*/
 .main-section {
     display: grid;
+    gap
     grid-template-columns: 225px 1fr;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: var(--light);
