--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -8,6 +8,7 @@
     --lighttext: rgb(228, 255, 248);
     --dark: #3b3b4f;
     --lightbackground: #bfd3d6;
+    --Verdana: Verdana, Geneva, Tahoma, sans-serif; 
 }
 
 body {
@@ -21,7 +22,7 @@ header {
     position: fixed;
     justify-content: space-between;
     align-items: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: var(--Verdana);  
     width: 100%;
     padding: 60px;
     background-color: var(--dark);
@@ -56,26 +57,17 @@ main {
 }
 
 /*borrowed the grid-template-column idea from Scott Casey*/
-.about-section {
-    display: grid;
-    gap: 15px;
-    padding: 2%;
-    grid-template-columns: 225px 1fr;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: var(--light);
-    border: solid 1px black;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); 
-}
 
 .main-section {
     display: grid;
-    gap: 15px;
-    padding: 2%;
-    grid-template-columns: 225px 1fr;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    gap: 25px;
+    padding: 3%;
+    grid-template-columns: 350px 1fr;
+    font-family: var(--Verdana);
     color: var(--light);
     border: solid 1px black;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); 
+    text-align: center;
 }
 
 
@@ -91,7 +83,7 @@ main {
 .horiseon {
     grid-column: 1;
     width: 100%;
-    grid-column:
+    z-index: 1;
     /* height: 300px;
     width: 200px;
     display: block;
@@ -109,9 +101,17 @@ main {
 }
 
 .small-project {
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
 }
 
-
+/*inspiration taken from stack overflow*/
+.small-project > img {
+  object-fit: cover;
+  width: 100%;
+  max-height: 100%;
+}
 
 #Contact{
     align-items: center;
@@ -120,10 +120,11 @@ main {
     color: var(--lighttext);
     display: flex;
     margin: 1em;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: var(--Verdana);
     border: solid 1px black;  
     padding: 10px;
     margin-bottom: 15px;
+    position: sticky;
 }
 
 contact h3 {
@@ -138,3 +139,4 @@ contact h3 {
 #contact-info:hover {
     font-style: bolder;
 }
+
