--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -72,13 +72,11 @@ main {
     position: relative;
     gap: 25px;
     padding: 3%;
-    grid-template-columns: 20% 1fr;
     font-family: var(--Verdana);
     color: var(--light);
     border-bottom: solid var(--lightbackground) 5px;
-    text-align: center;
+    text-align: start;
 }
-
 
 .cards > section:first-of-type {
     grid-column: span 2;
@@ -88,6 +86,11 @@ main {
     height: 300px;
     overflow: hidden;
 }
+
+.Horiseon-div:hover {
+    box-shadow: inset 0px 0px 10px rgb(102, 144, 236), 0 0 10px rgb(102, 144, 236);
+  }
+
 
 .horiseon {
     grid-column: 1;
@@ -104,12 +107,17 @@ main {
  grid-template-columns: repeat(2,1fr);
  gap: 15px;
 }
-
+  
 .small-project {
     width: 100%;
     height: 200px;
     overflow: hidden;
 }
+
+
+.small-project:hover {
+    box-shadow: inset 0px 0px 10px rgb(102, 144, 236), 0 0 10px rgb(102, 144, 236);
+  }
 
 /*inspiration taken from stack overflow*/
 .small-project > img {
@@ -146,10 +154,10 @@ contact h3 {
 }
 
 .me-img {
- grid-column: 1;
+ /* grid-column: 1; */
  height: 300px;
 }
 
 .me {
-    gap: 25px;
+    align-items: center;
 }
