--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -48,8 +48,8 @@ nav a {
     padding: 20px;
     text-decoration: none;
     text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
     color: var(--lighttext);
 }
 
@@ -59,6 +59,10 @@ main {
     width: 100%;
     flex-direction: column;
     color: var(--light);
+}
+
+figcaption {
+    z-index: 2;
 }
 
 .nav-anchor {
