--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -61,9 +61,6 @@ main {
     color: var(--light);
 }
 
-figcaption {
-    z-index: 2;
-}
 
 .nav-anchor {
     height: 200px;
@@ -89,6 +86,8 @@ figcaption {
 .Horiseon-div {
     height: 300px;
     overflow: hidden;
+    /* text-decoration: none; */
+    /* background-image: "assets/images/01-html-css-git-homework-demo.png"; */
 }
 
 .Horiseon-div:hover {
@@ -105,6 +104,8 @@ figcaption {
 .horiseon img {
     width: 100%;
 }
+
+
 
 .cards {
  display: grid;
