--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -68,9 +68,24 @@ main {
 
 /*borrowed the grid-template-column idea from Scott Casey*/
 
-.main-section {
+.about-section {
     display: grid;
-    position: relative;
+    grid-template-columns: 1fr 1fr;
+    gap: 25px;
+    padding: 3%;
+    font-family: 'Kdam Thmor Pro', sans-serif;
+    color: var(--light);
+    border-bottom: solid var(--lightbackground) 5px;
+    text-align: start;   
+}
+
+.me-img {
+    /* grid-column: 1; */
+    height: 300px;
+   }
+   
+.project-section {
+    display: grid;
     gap: 25px;
     padding: 3%;
     font-family: 'Kdam Thmor Pro', sans-serif;
@@ -86,12 +101,15 @@ main {
 .Horiseon-div {
     height: 300px;
     overflow: hidden;
+    filter: brightness(50%);
+    border-radius: 3px;
     /* text-decoration: none; */
     /* background-image: "assets/images/01-html-css-git-homework-demo.png"; */
 }
 
 .Horiseon-div:hover {
-    box-shadow: inset 0px 0px 10px rgb(102, 144, 236), 0 0 10px rgb(102, 144, 236);
+    filter: brightness(100%);
+    box-shadow: inset 0 0 3px rgb(102, 144, 236), 0 0 3px rgb(102, 144, 236);
   }
 
 
@@ -108,19 +126,20 @@ main {
 
 
 .cards {
- display: grid;
- grid-template-columns: repeat(2,1fr);
- gap: 15px;
+    display: grid;
+     grid-template-columns: repeat(2,1fr);
+     gap: 15px;
 }
   
 .small-project {
     width: 100%;
     height: 200px;
     overflow: hidden;
+    filter: brightness(50%);
 }
 
-
 .small-project:hover {
+    filter: brightness(100%);
     box-shadow: inset 0px 0px 10px rgb(102, 144, 236), 0 0 10px rgb(102, 144, 236);
   }
 
@@ -140,12 +159,12 @@ main {
     margin: 1em;
     font-family: 'Kdam Thmor Pro', sans-serif;
     border: solid 1px black;  
-    padding: 10px;
+    padding: 20px;
     margin-bottom: 15px;
     position: sticky;
 }
 
-contact h3 {
+#contact h3 {
     padding-left: 15px;
 }
 
@@ -154,15 +173,12 @@ contact h3 {
     padding-right: 15px;
 }
 
-#contact-info:hover {
-    font-style: bolder;
-}
 
-.me-img {
+.me img {
  /* grid-column: 1; */
  height: 300px;
 }
 
 .me {
-    align-items: center;
+    text-align: center;
 }
