--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -10,7 +10,7 @@
     --dark: #3b3b4f;
     --lightbackground: #bfd3d6;
     --Kdam-Thmor-Pro: 'Kdam Thmor Pro', sans-serif; 
-    --background-image: linear-gradient(#1515c2,#03012d);
+    --background-image: linear-gradient(#2a2ad8,#05052e);
 }
 
 body {
@@ -130,7 +130,6 @@ main {
     background-image: url("../images/01-html-css-git-homework-demo.png");
     background-size: 150%;
     align-items: flex-end;
-    
 }    
 
 .project-title {
@@ -219,7 +218,7 @@ main {
     margin: 1em;
     border: solid 1px black;  
     padding: 2%;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
     position: sticky;
 }
 
