--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     scroll-padding-top: 200px;
+    scroll-behavior: smooth;
 }
 
 :root {
@@ -61,13 +62,11 @@ main {
     color: var(--light);
 }
 
-
+/* this is used to keep the sticky position header bar from covering content */
 .nav-anchor {
     height: 200px;
 }
-
-/*borrowed the grid-template-column idea from Scott Casey*/
-
+/*this section styles and formats the about-me area of the page*/
 .about-section {
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -96,7 +95,7 @@ main {
 .me-img {
     height: 300px;
    }
-   
+/*the prject section has some minor grid differences from about-me so it's calle dout separately*/  
 .project-section {
     display: grid;
     gap: 25px;
@@ -108,37 +107,6 @@ main {
     margin-right: 20px; 
 }
 
-.Horiseon-div {
-    height: 300px;
-    overflow: hidden;
-    filter: brightness(50%);
-    border-radius: 3px;
-    display: flex;
-}
-
-.Horiseon-div:hover {
-    filter: brightness(100%);
-    box-shadow: inset 0 0 3px rgb(102, 144, 236), 0 0 3px rgb(102, 144, 236);
-  }
-
-
-.horiseon {
-    display: flex;
-    grid-column: 1;
-    width: 100%;
-    /* z-index: 1; */
-    background-image: url("../images/01-html-css-git-homework-demo.png");
-    background-size: 150%;
-    align-items: flex-end;
-}    
-
-.project-title {
-    display: flex;
-    background-color: var(--dark);
-    padding: 1%;
-    color: var(--lighttext);
-}
-
 .cards {
     display: grid;
      grid-template-columns: repeat(2,1fr);
@@ -147,6 +115,40 @@ main {
 
 .cards > section:first-of-type {
     grid-column: span 2;
+}
+
+.Horiseon-div {
+    height: 300px;
+    overflow: hidden;
+    filter: brightness(50%);
+    border-radius: 3px;
+    display: flex;
+}
+
+.Horiseon-div .project-title {
+    display: block;
+}
+
+.Horiseon-div:hover {
+    filter: brightness(100%);
+    box-shadow: inset 0 0 3px rgb(102, 144, 236), 0 0 3px rgb(102, 144, 236);
+  }
+
+.horiseon {
+    display: flex;
+    grid-column: 1;
+    width: 100%;
+    background-image: url("../images/01-html-css-git-homework-demo.png");
+    background-size: 150%;
+    align-items: flex-end;
+    background-size: cover;
+}    
+
+.project-title {
+    display: flex;
+    background-color: var(--dark);
+    padding: 1%;
+    color: var(--lighttext);
 }
   
 .small-project {
@@ -161,69 +163,42 @@ main {
 .small-project:hover {
     filter: brightness(100%);
     box-shadow: inset 0px 0px 10px rgb(102, 144, 236), 0 0 10px rgb(102, 144, 236);
-  }
-
-.small-project > img {
-  object-fit: cover;
-  width: 100%;
-  max-height: 100%;
 }
 
-.small-project2 {
+.small-project-style {
     display: flex;
     grid-column: 1;
     width: 100%;
-    background-size: 150%;
     align-items: flex-end;
+}
+
+.small-project2 {
     background-image: url("../images/1mohammad-alizade-XgeZu2jBaVI-unsplash.jpg");
     background-size: cover;
 }
 
 .small-project3 {
-    display: flex;
-    grid-column: 1;
-    width: 100%;
-    background-size: 150%;
-    align-items: flex-end;
     background-image: url("../images/peru-IMG_4526.jpeg");
     background-size: cover;
 }
 
 .small-project4 {
-    display: flex;
-    grid-column: 1;
-    width: 100%;
-    background-size: 150%;
-    align-items: flex-end;
     background-image: url("../images/pexels-pixabay-65894.jpg");
     background-size: cover;
 }
 
 .small-project5 {
-    display: flex;
-    grid-column: 1;
-    width: 100%;
-    background-size: 150%;
-    align-items: flex-end;
     background-image: url("../images/3philipp-katzenberger-iIJrUoeRoCQ-unsplash.jpg");
     background-size: cover;
 }
 
 #Contact{
     align-items: center;
+    display: flex;
     justify-content: space-between;
     background-color: var(--dark);
-    color: var(--lighttext);
-    display: flex;
     margin: 1em;
-    border: solid 1px black;  
-    padding: 2%;
-    /* margin-bottom: 15px; */
-    position: sticky;
-}
-
-#contact h3 {
-    padding-left: 15px;
+    padding: 1.2em;
 }
 
 #contact-info {
