--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -86,6 +86,7 @@ main {
 .about-image-div {
     grid-row-start: 2;
     text-align: center;
+    display: inline;
 }
 
 .about-section > p {
@@ -95,7 +96,7 @@ main {
 .me-img {
     height: 300px;
    }
-/*the prject section has some minor grid differences from about-me so it's calle dout separately*/  
+/*the project section has some minor grid differences from about-me so it's calle dout separately*/  
 .project-section {
     display: grid;
     gap: 25px;
@@ -116,6 +117,7 @@ main {
 .cards > section:first-of-type {
     grid-column: span 2;
 }
+
 
 .Horiseon-div {
     height: 300px;
